--- a/screens/settings/impl/src/main/res/layout/fragment_settings.xml
+++ b/screens/settings/impl/src/main/res/layout/fragment_settings.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/background_toolbar_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_bac"
@@ -260,7 +260,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etMuscleGroups"
-        tools:listitem="@layout/item_approach" />
+        tools:listitem="@layout/item_muscle_group" />
 
     <TextView
         android:id="@+id/tvDateSave"
