--- a/screens/exercise_create/impl/src/main/res/layout/bottom_sheet_add_exercise.xml
+++ b/screens/exercise_create/impl/src/main/res/layout/bottom_sheet_add_exercise.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constrainLayout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/addExerciseDialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <AutoCompleteTextView
-        android:id="@+id/autoCompleteTvexercisePattern"
+        android:id="@+id/etExerciseName"
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,23 +24,29 @@
         android:dropDownHeight="85dp"
         android:hint="@string/names_exercise"
         android:maxLength="30"
-        app:layout_constraintBottom_toTopOf="@id/etCommentExercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etCommentExercise"
+        android:id="@+id/etExerciseComment"
         style="@style/EditTextStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/comment"
         android:importantForAutofill="no"
-        app:layout_constraintBottom_toTopOf="@id/btnSave"
-        app:layout_constraintEnd_toEndOf="@id/autoCompleteTvexercisePattern"
-        app:layout_constraintStart_toStartOf="@id/autoCompleteTvexercisePattern"
-        app:layout_constraintTop_toBottomOf="@id/autoCompleteTvexercisePattern" />
+        app:layout_constraintTop_toBottomOf="@id/etExerciseName" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSuperSet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_16"
+        android:clipToPadding="false"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/etExerciseComment"
+        tools:listitem="@layout/item_set" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSave"
@@ -46,21 +54,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/save"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnAddToSet"
-        app:layout_constraintTop_toBottomOf="@id/etCommentExercise" />
+        app:layout_constraintStart_toEndOf="@id/btnAction"
+        app:layout_constraintTop_toBottomOf="@id/rvSuperSet" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnAddToSet"
+        android:id="@+id/btnAction"
         style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/add_to_set"
-        app:layout_constraintBottom_toBottomOf="@id/btnSave"
         app:layout_constraintEnd_toStartOf="@id/btnSave"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btnSave" />
-
+        app:layout_constraintTop_toBottomOf="@id/rvSuperSet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
